fixed overlapping issue for assignment name

--- a/public/css/enter-name-page.css
+++ b/public/css/enter-name-page.css
@@ -77,7 +77,7 @@ h3.project-name {
 }
 
 .assignment-name {
-  height: 10vh;
+  height: 15vh;
 }
 
 
